# sandwitches

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  Taskfile.yml  babel.config.json  docker-compose.yaml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  renovate.json  supervisord.conf  tasks.py  ty.toml  webpack.config.js
.gemini/: instructions.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  codeql.yml  release.yaml  renovate.yml  stale-branches.yml  stale.yaml
.task/checksum/: build-frontend
go-app/: .air.toml  Dockerfile  README.md  go.mod  go.sum  main.go  supervisord.conf
go-app/templates/: base.html  cart.html  community.html  detail.html  error.html  favorites.html  head.html  header.html  index.html  login.html  order_detail.html  order_tracker.html  profile.html  settings.html  setup.html  signup.html  tail.html
mobile/: .flutter-plugins-dependencies  README.md  pubspec.yaml
mobile/.dart_tool/: package_config.json  package_graph.json
openspec/: config.yaml
src/: __init__.py  manage.py
tests/: conftest.py  test_admin_new_features.py  test_api_new.py  test_api_permissions.py  test_cart.py  test_community_separation.py  test_features.py  test_gotify.py  test_i18n.py  test_instagram.py  test_new_admin_features.py  test_order_tracker.py  test_settings.py  test_settings_fix.py  test_storage.py  test_tasks.py  test_tasks_new.py  test_ui.py  test_ui_admin.py  test_ui_approval.py
tests_go/: conftest.py  test_go_ui.py
(+194 files in other folders)
