[project]
name = "sandwitches"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Martyn van Dijke", email = "martijnvdijke600@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "pillow>=12.0.0",
]


[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.14.3",
]
